tree-sitter-djot-inline/test/corpus/syntax.txt
===============================================================================
Emphasis
===============================================================================
With _em_

-------------------------------------------------------------------------------

(inline
  (emphasis
    (emphasis_begin)
    (content)
    (emphasis_end)))

===============================================================================
Verbatim: single
===============================================================================
Simple `verbatim` here

-------------------------------------------------------------------------------

(inline
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end)))

===============================================================================
Verbatim: double with single inside
===============================================================================
``verbatim with a backtick ` characters``

-------------------------------------------------------------------------------

(inline
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end)))

===============================================================================
Verbatim: with triple inside
===============================================================================
`verbatim with three backtick ``` characters`

-------------------------------------------------------------------------------

(inline
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end)))

===============================================================================
Verbatim: newline closes
===============================================================================
`verbatim

-------------------------------------------------------------------------------

(inline
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end)))

===============================================================================
Verbatim: can contain newlines
===============================================================================
`verbatim
with
newlines`

-------------------------------------------------------------------------------

(inline
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end)))


===============================================================================
Verbatim: multiple
===============================================================================
`x` `y`

-------------------------------------------------------------------------------

(inline
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end))
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end)))

===============================================================================
Verbatim: with hash
===============================================================================
Don't consume `#` in heading parser code

-------------------------------------------------------------------------------

(inline
  (verbatim
    (verbatim_marker_begin)
    (content)
    (verbatim_marker_end)))

===============================================================================
Paragraph: todo note fixme
===============================================================================
Higlight TODO NOTE and FIXME

-------------------------------------------------------------------------------

(inline (todo) (note) (fixme))

===============================================================================
Smart punctuation
===============================================================================

Ellipsis...
Em---dash
Eh--dash
Some{"quotes"} be{'here'}yo
 \"Straight\" \'quotes\'

-------------------------------------------------------------------------------

(inline
  (ellipsis)
    (em_dash)
    (en_dash)
    (quotation_marks)
    (quotation_marks)
    (quotation_marks)
    (quotation_marks)
    (quotation_marks)
    (quotation_marks)
    (quotation_marks)
    (quotation_marks))

===============================================================================
Backslash escape
===============================================================================

No \_emphasis\_
No \_strong\_
No \<autolink>
Regular \.\.\. dots
Inside _x\_y_
No \{+insert\*}
\> no quote

-------------------------------------------------------------------------------

(inline
  (backslash_escape) (backslash_escape)
  (backslash_escape) (backslash_escape)
  (backslash_escape)
  (backslash_escape) (backslash_escape) (backslash_escape)
  (emphasis (emphasis_begin) (content (backslash_escape)) (emphasis_end))
  (backslash_escape) (backslash_escape)
  (backslash_escape))

===============================================================================
Image: inline
===============================================================================
![descr](/url)

-------------------------------------------------------------------------------

(inline
  (inline_image
    (image_description)
    (inline_link_destination)))

===============================================================================
Image: empty inline
===============================================================================
![](/url)

-------------------------------------------------------------------------------

(inline
  (inline_image
    (inline_link_destination)))

===============================================================================
Image: collapsed reference link
===============================================================================
![img][]

-------------------------------------------------------------------------------

(inline
  (collapsed_reference_image
    (image_description)))

===============================================================================
Image: full reference
===============================================================================
![descr][ref]

-------------------------------------------------------------------------------

(inline
  (full_reference_image
    (image_description)
    (link_label)))

===============================================================================
Emphasis
===============================================================================
With _emphasis_ here

-------------------------------------------------------------------------------

(inline
  (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Strong
===============================================================================
With *strong* here

-------------------------------------------------------------------------------

(inline
  (strong (strong_begin) (content) (strong_end)))

===============================================================================
Emphasis and strong
===============================================================================
With _*strong* emphasis_ here
With *_emphasis_ strong* here

-------------------------------------------------------------------------------

(inline
  (emphasis
    (emphasis_begin)
    (content (strong (strong_begin) (content) (strong_end)))
    (emphasis_end))
  (strong
    (strong_begin)
    (content (emphasis (emphasis_begin) (content) (emphasis_end)))
    (strong_end)))

===============================================================================
Emphasis and strong two chars
===============================================================================
*bc a*
_bc a_

-------------------------------------------------------------------------------

(inline
  (strong
    (strong_begin)
    (content)
    (strong_end))
  (emphasis
    (emphasis_begin)
    (content)
    (emphasis_end)))

===============================================================================
Emphasis and strong with newlines
===============================================================================
*a
b*
_a
b_

-------------------------------------------------------------------------------

(inline
  (strong
    (strong_begin)
    (content)
    (strong_end))
  (emphasis
    (emphasis_begin)
    (content)
    (emphasis_end)))

===============================================================================
Emphasis: three chars with spaces
===============================================================================
_a b c_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Emphasis: two chars with spaces
===============================================================================
_a b_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Emphasis: one char between
===============================================================================
_a_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Emphasis: three chars with a newline
===============================================================================
_a
b c_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))


===============================================================================
Emphasis: three chars with a newline 2
===============================================================================
_ai
b c_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Emphasis: three chars with a two newlines
===============================================================================
_a
b
c_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Emphasis: two chars with a newline
===============================================================================
_a
b_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Emphasis: two chars with a newline 2
===============================================================================
_ab
cd_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Emphasis: two chars with a newline 3
===============================================================================
_ab
x
cd_

-------------------------------------------------------------------------------

(inline (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Superscript: three chars with spaces
===============================================================================
^a b c^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Superscript: two chars with spaces
===============================================================================
^a b^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Superscript: one char between
===============================================================================
^a^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Superscript: three chars with a newline
===============================================================================
^a
b c^

-------------------------------------------------------------------------------

(inline (superscript (content)))


===============================================================================
Superscript: three chars with a newline 2
===============================================================================
^ai
b c^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Superscript: three chars with a two newlines
===============================================================================
^a
b
c^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Superscript: two chars with a newline
===============================================================================
^a
b^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Superscript: two chars with a newline 2
===============================================================================
^ab
cd^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Superscript: two chars with a newline 3
===============================================================================
^ab
x
cd^

-------------------------------------------------------------------------------

(inline (superscript (content)))

===============================================================================
Emphasis: nested
===============================================================================
With __nested_ emphasis_

-------------------------------------------------------------------------------

(inline
  (emphasis
    (emphasis_begin)
    (content (emphasis (emphasis_begin) (content) (emphasis_end)))
    (emphasis_end)))

===============================================================================
Emphasis: forced despite spaces
===============================================================================
{_yes_}
{_ yes _}
_yes _}
{_ yes_}

-------------------------------------------------------------------------------

(inline
  (emphasis (emphasis_begin) (content) (emphasis_end))
  (emphasis (emphasis_begin) (content) (emphasis_end))
  (emphasis (emphasis_begin) (content) (emphasis_end))
  (emphasis (emphasis_begin) (content) (emphasis_end)))

===============================================================================
Strong: forced despite spaces
===============================================================================
{*yes*}
*yes *}
{* yes*
{* yes *}

-------------------------------------------------------------------------------

(inline
  (strong (strong_begin) (content) (strong_end))
  (strong (strong_begin) (content) (strong_end))
  (strong (strong_begin) (content) (strong_end))
  (strong (strong_begin) (content) (strong_end)))

===============================================================================
Subscript
===============================================================================
~sub~
{~many sub~}

-------------------------------------------------------------------------------

(inline
  (subscript (content))
  (subscript (content)))

===============================================================================
Superscript
===============================================================================
^sup^
{^many sup^}

-------------------------------------------------------------------------------

(inline
  (superscript (content))
  (superscript (content)))

===============================================================================
Highlighted
===============================================================================
With {=mark=} here

-------------------------------------------------------------------------------

(inline
  (highlighted (content)))

===============================================================================
Insert
===============================================================================
With {+insert+} here

-------------------------------------------------------------------------------

(inline
  (insert (content)))

===============================================================================
Delete
===============================================================================
With {-delete-} here

-------------------------------------------------------------------------------

(inline
  (delete (content)))

===============================================================================
Inline with newlines
===============================================================================
{=a
b=}
{+a
b+}
{-a
b-}
^a
b^
~a
b~

-------------------------------------------------------------------------------

(inline
  (highlighted
    (content))
    (insert
      (content))
    (delete
      (content))
    (superscript
      (content))
    (subscript
      (content)))

===============================================================================
Hard line break
===============================================================================
With \
break

-------------------------------------------------------------------------------

(inline
  (hard_line_break))

===============================================================================
Symbol
===============================================================================
With :wink: here

-------------------------------------------------------------------------------

(inline
  (symbol))

===============================================================================
Link: inline
===============================================================================
With [link](/url)

-------------------------------------------------------------------------------

(inline
  (inline_link
    (link_text)
    (inline_link_destination)))

===============================================================================
Link: with newline
===============================================================================
With [link
newline](/url)

-------------------------------------------------------------------------------

(inline
  (inline_link
    (link_text)
    (inline_link_destination)))

===============================================================================
Link: begin
===============================================================================
[link](/url)

-------------------------------------------------------------------------------

(inline
  (inline_link
    (link_text)
    (inline_link_destination)))

===============================================================================
Link: collapsed reference link
===============================================================================
With [a reference][]

-------------------------------------------------------------------------------

(inline
  (collapsed_reference_link
    (link_text)))

===============================================================================
Link: full reference single
===============================================================================
With [a reference][ref]

-------------------------------------------------------------------------------

(inline
  (full_reference_link
    (link_text)
    (link_label)))

===============================================================================
Link: full reference
===============================================================================
With [a reference][ref]

-------------------------------------------------------------------------------

(inline
  (full_reference_link
    (link_text)
    (link_label)))

===============================================================================
Inline attribute: mixed
===============================================================================
text{.one .two #id author="with spaces"}

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (class)
      (class)
      (identifier)
      (key_value
        (key)
        (value)))))

===============================================================================
Inline attribute: casing
===============================================================================
text{.snake_case .cebab-case}

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (class)
      (class))))

===============================================================================
Inline attribute: key casing
===============================================================================
text{snake_case=2 kebab-case=3}

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (key_value
        (key)
        (value))
      (key_value
        (key)
        (value)))))

===============================================================================
Inline attribute: surrounding spaces
===============================================================================
text{ .class }

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (class))))

===============================================================================
Inline attribute: with newlines
===============================================================================
text{.one
.two
#three}

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (class)
      (class)
      (identifier))))

===============================================================================
Inline attribute: with comment
===============================================================================
text{#ident % later we'll add a class %}

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (identifier)
      (comment
        (content)))))

===============================================================================
Inline attribute: comment
===============================================================================
text{%
some text here
%}

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (comment
        (content)))))

===============================================================================
Inline attribute: standalone comment
===============================================================================
Foo bar {% This is a comment, spanning
multiple lines %} baz.

-------------------------------------------------------------------------------

(inline
  (comment
    (content)))

===============================================================================
Inline attribute: comment escape %
===============================================================================
Before {% escape \% %}

-------------------------------------------------------------------------------

(inline
  (comment
    (content
      (backslash_escape))))

===============================================================================
Inline attribute: mixed comment escape %
===============================================================================
Before{#id % escape \% %}

-------------------------------------------------------------------------------

(inline
  (inline_attribute
    (args
      (identifier)
      (comment
        (content
          (backslash_escape))))))

===============================================================================
Span
===============================================================================
One [two three]{.class
#id}

-------------------------------------------------------------------------------

(inline
  (span
    (inline_attribute
      (args
        (class)
        (identifier)))))

===============================================================================
Autolink
===============================================================================
With </url> link

-------------------------------------------------------------------------------

(inline
  (autolink))

===============================================================================
Footnote: reference
===============================================================================

Here's a ref.[^foo]

-------------------------------------------------------------------------------

(inline
  (footnote_reference
    (footnote_marker_begin)
    (reference_label)
    (footnote_marker_end)))

===============================================================================
Raw inline
===============================================================================
`<? php echo 'yoyo' ?>`{=html}

-------------------------------------------------------------------------------

(inline
  (raw_inline
    (raw_inline_marker_begin)
    (content)
    (raw_inline_marker_end)
    (raw_inline_attribute
      (language))))

===============================================================================
Math
===============================================================================
$`1 + 2`

-------------------------------------------------------------------------------

(inline
  (math
    (math_marker)
    (math_marker_begin)
    (content)
    (math_marker_end)))

